# MINTlab

./: .gitignore  README.md  pyproject.toml  requirements.txt
extras/: 01_MINT erklärt.md  02 Part vs. Part Design – Einfach erklärt.md  03 FreeCAD-Menubefehle - Erweiterte Konstruktiontechniken.md
notebooks/: 00_TOC.ipynb
notebooks/02(I)nformatik/: 00_TOC.ipynb  M01a_Erste_Schritte_JupyterLab.ipynb  M01b_Erste_Schritte_JupyterLab.ipynb  M01c_Erste_Schritte_JupyterLab.ipynb  M02a_Programmfluss_Kontrolle.ipynb  M02b_Programmfluss_Kontrolle.ipynb  M02c_Programmfluss_Kontrolle.ipynb  M03a_Funktionen_und_Strukturierung.ipynb  M03b_Funktionen_und_Strukturierung.ipynb  M03c_Funktionen_und_Strukturierung.ipynb  M04a_Datenstrukturen.ipynb  M04b_Datenstrukturen.ipynb  M04c_Datenstrukturen.ipynb  M05a_Daten_visualisieren.ipynb  M05b_Daten_visualisieren.ipynb  M05c_Daten_visualisieren.ipynb  M06a_Interaktive_Widgets.ipynb  M06b_Interaktive_Widgets.ipynb  M06c_Interaktive_Widgets.ipynb  M07a_NumPy_Wissenschaftliches_Rechnen.ipynb  M07b_NumPy_Wissenschaftliches_Rechnen.ipynb  M07c_NumPy_Wissenschaftliches_Rechnen.ipynb
notebooks/03(N)Physik/: 00_TOC.ipynb  M01a_Kinematik_Bewegung.ipynb  M01b_Kinematik_Übungen.ipynb  M01c_Kinematik_Lösungen.ipynb  M02a_Newtons_Gesetze.ipynb  M02b_Newtons_Gesetze.ipynb  M02c_Newtons_Gesetze.ipynb  M03a_Impuls_und_Kollisionen.ipynb  M03b_Impuls_und_Kollisionen.ipynb  M03c_Impuls_und_Kollisionen.ipynb  M04a_Energie_Energieerhaltung.ipynb  M04b_Energie_Energieerhaltung.ipynb  M04c_Energie_Energieerhaltung.ipynb  M05a_Schwingungen_Wellen.ipynb  (+14 more)
(+22 files in other folders)
