[project]
name = "mintlab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupytercad-freecad>=3.0.0",
    "jupyterlab>=4.4.10",
    "jupytext==1.18.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
